@@ -28,6 +28,13 @@ AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
 EOF
 
+cat >configure.in <<EOF
+AC_INIT([configure], [1.0])
+AM_INIT_AUTOMAKE([an-invalid-automake-option])
+AC_CONFIG_FILES([Makefile])
+AC_OUTPUT
+EOF
+
 : >Makefile.am
 
 $ACLOCAL 2>stderr && { cat stderr >&2; Exit 1; }
