@@ -1,5 +1,9 @@
 2010-04-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Make test for configure.in vs. configure.ac stricter.
+	* tests/configure.test: Use a configure.in file that provokes
+	an automake error, to ensure configure.ac is preferred.
+
 	Use `set -e' in confsub.test (avoids possible false negatives).
 	* tests/confsub.test: Enable shell `errexit' flag, and related
 	changes (this helps avoiding some possible minor false negatives).
